--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content:center;
+    background-color: rgb(154, 91, 255);
+}
